<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn1_player1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:minWidth="0dp"
            android:text="@string/button_label_1"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btn1_player3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:minWidth="0dp"
            android:text="@string/button_label_1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/btn3_player3"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn2_player3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:minWidth="0dp"
            android:text="@string/button_label_2"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/btn4_player3"
            app:layout_constraintStart_toEndOf="@+id/btn1_player3" />

        <Button
            android:id="@+id/btn3_player3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="203dp"
            android:minWidth="0dp"
            android:text="@string/button_label_3"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn4_player3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="203dp"
            android:minWidth="0dp"
            android:text="@string/button_label_4"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn3_player3" />

        <Button
            android:id="@+id/btn1_player4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:minWidth="0dp"
            android:text="@string/button_label_1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/btn3_player4"
            app:layout_constraintEnd_toStartOf="@+id/btn2_player4" />

        <Button
            android:id="@+id/btn2_player4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:minWidth="0dp"
            android:text="@string/button_label_2"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/btn4_player4"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn3_player4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="203dp"
            android:minWidth="0dp"
            android:text="@string/button_label_4"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn4_player4" />

        <Button
            android:id="@+id/btn4_player4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="203dp"
            android:minWidth="0dp"
            android:text="@string/button_label_4"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn2_player1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:text="@string/button_label_2"
            app:layout_constraintStart_toEndOf="@+id/btn1_player1"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btn3_player1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/button_label_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1_player1" />

        <Button
            android:id="@+id/btn4_player1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:text="@string/button_label_4"
            app:layout_constraintStart_toEndOf="@+id/btn3_player1"
            app:layout_constraintTop_toBottomOf="@+id/btn2_player1" />

        <Button
            android:id="@+id/btn1_player2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="7dp"
            android:text="@string/button_label_1"
            app:layout_constraintEnd_toStartOf="@+id/btn2_player2"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/btn3_player2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_label_3"
            app:layout_constraintEnd_toStartOf="@+id/btn4_player2"
            app:layout_constraintTop_toBottomOf="@+id/btn1_player2" />

        <Button
            android:id="@+id/btn4_player2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:text="@string/button_label_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn2_player2" />

        <Button
            android:id="@+id/btn2_player2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="31dp"
            android:text="@string/button_label_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="64dp"
            android:text="@string/player1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="70dp"
            android:text="@string/player2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="13dp"
            android:text="@string/life_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/pl1LifeCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="96dp"
            android:text="20"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:text="@string/life_count"
            app:layout_constraintEnd_toStartOf="@+id/pl2LifeCountTV"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/pl2LifeCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="55dp"
            android:text="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginBottom="19dp"
            android:text="@string/player3"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="19dp"
            android:text="@string/player4"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/life_count"
            app:layout_constraintBottom_toTopOf="@+id/btn1_player4"
            app:layout_constraintEnd_toStartOf="@+id/pl4LifeCountTV" />

        <TextView
            android:id="@+id/pl4LifeCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="20dp"
            android:text="20"
            app:layout_constraintBottom_toTopOf="@+id/btn2_player4"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/life_count"
            app:layout_constraintBottom_toTopOf="@+id/btn1_player3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pl3LifeCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="21dp"
            android:text="20"
            app:layout_constraintBottom_toTopOf="@+id/btn2_player3"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <TextView
            android:id="@+id/textViewGameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="66dp"
            android:text="TextView"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>